--- a/samsung.html
+++ b/samsung.html
@@ -6,7 +6,7 @@
 
 <head>
 
-<title>Samsung</title>
+<title>Challenges of the Semiconductor Supply Chain</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 
@@ -30,7 +30,7 @@
 
 
 <div id="container">
-<div id="header"><img src="Samsung-Logo.png" height="131" width="200" align="left" alt="ASML"/><h1 style="position:relative; top:30px">Samsung</h1></div>
+<div id="header"><h1 style="position:relative; top:30px">Challenges of the Semiconductor Supply Chain</h1></div>
 <div id="menu">
 	 <ul>
 		<li><a href="home.html">Home</a></li>
@@ -44,6 +44,15 @@
 	</ul>
 </div>
 
+<div id="breadcrumbs">
+	<a href="home.html">Home</a>&rarr; 
+	<a href="tsmc.html">TSMC</a>&rarr; 
+	<a href="samsung.html"><b>Samsung</b></a>&rarr; 
+	<a href="intel.html">Intel</a>&rarr;
+	<a href="asml.html">ASML</a>&rarr;
+	<a href="restofmarket.html">The Rest of the Market</a>
+</div>
+
 
 <div id="main-content">
 
@@ -53,7 +62,7 @@
 
 <p>
 
-TMSC&apos;s chief rival is South Korea&apos;s economic powerhouse Samsung. Known more for their smartphones, TV, and appliances, they also offer contract manufacturing serving as a foundry to large firms. Samsung is the only other firm that has been able to keep up the extreme investments needed to produce the smallest of semiconductors. Despite being the only other manufacturer capable of producing at the cutting edge, TSMC has over three times the production capacity of the most advanced chips at 7nm and below [7].  Samsung has also been faltering on the quality. Unable to match the production capabilities of TSMC, they have been forced to sell at lower profit margins, stunting further growth in the space. Similarly, most of the production is located in South Korea, adding some production in the US and Europe for a minority of their production. While both companies are still engaged in a competitive race, TSMC still sits as the Goliath in the semiconductor manufacturing race. 
+TMSC&apos;s chief rival is South Korea&apos;s economic powerhouse Samsung. Known more for their smartphones, TV, and appliances, they also offer contract manufacturing serving as a foundry to large firms. Samsung is the only other firm that has been able to keep up the extreme investments needed to produce the smallest of semiconductors. Despite being the only other manufacturer capable of producing at the cutting edge, TSMC has over three times the production capacity of the most advanced chips at 7nm and below <a href="workscited.html#source7">[7]</a>.  Samsung has also been faltering on the quality. Unable to match the production capabilities of TSMC, they have been forced to sell at lower profit margins, stunting further growth in the space. Similarly, most of the production is located in South Korea, adding some production in the US and Europe for a minority of their production. While both companies are still engaged in a competitive race, TSMC still sits as the Goliath in the semiconductor manufacturing race. </p>
 
 
 
