--- a/tsmc.html
+++ b/tsmc.html
@@ -6,7 +6,7 @@
 
 <head>
 
-<title>TSMC</title>
+<title>Challenges of the Semiconductor Supply Chain</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 
@@ -30,7 +30,7 @@
 
 
 <div id="container">
-<div id="header"><img src="TBLimages/ASML-Logo.png" height="131" width="200" align="left" alt="ASML"/><h1 <div id="header"><h1 style="position:relative; top:30px">Challenges of the Semiconductor Supply Chain</h1></div>
+<div id="header"><h1 style="position:relative; top:30px">Challenges of the Semiconductor Supply Chain</h1></div>
 <div id="menu">
 	 <ul>
 		<li><a href="home.html">Home</a></li>
@@ -44,27 +44,36 @@
 	</ul>
 </div>
 
-
+<div id="breadcrumbs">
+	<a href="home.html">Home</a>&rarr; 
+	<a href="tsmc.html"><b>TSMC</b></a>&rarr; 
+	<a href="samsung.html">Samsung</a>&rarr; 
+	<a href="intel.html">Intel</a>&rarr;
+	<a href="asml.html">ASML</a>&rarr;
+	<a href="restofmarket.html">The Rest of the Market</a>
+</div>
 
 <div id="main-content">
 
 
 <h4>TSMC</h4>
-<br>
 
-<p>
+<div class="imageleftcaption" style="width:330px;">
 
-One of the largest of these firms is a foundry that supports the development of most PCs and smartphones around the world: the Taiwan Semiconductor Manufacturing Company. When people think about the computers they by, they mostly think of the front-facing companies that you purchase from, e.g. Apple, Dell, HP. They mostly focus on the R&D process of the value chain, but at most participate in the ATP phase of the manufacturing process. These companies rely on TSMC for semiconductor fabrication, sometimes as their sole provider. For example, Apple’s newest A16 chip at the heart of the iPhone 15 is designed by Apple, but relies entirely on TSMC on fabrication. The production of the iPhone, like many other high-computation devices, would not be possible without TMSC. The firm is looking to diversify their fabrication to the United States and Europe including the 40 billion dollar fab investment mentioned earlier. This move was Figure 4: The location of TSMC’s foundries.
-Source: Adapted from [10]
-Note: This does not show current plants being constructed, including the one in Arizona, and one in Japan. The Camas and Shanghai  plant are developing chips on the micrometer scale, which is older technology that is only supplemental to the higher preforming chips being produced almost solely on the island. 
-not popular domestically because the company is committed to Taiwan and is embedded into the national identity. The plant was added to the United States and was considered as “friend shoring”, expected to represent less than 5% of the company’s wafer production [6]. The rest of production is concentrated on the island in a few plants. 
+<a id="Figure4">
 
+<img src="MapTaiwan.png" width="330px" height="220px"  alt="Total Semiconductor Sales by Country in 2021"/>
 
+</a>
 
+</a>Figure 4: The location of TSMC&apos;s foundries.<br>
+Source: Adapted from <a href="workscited.html#source10">[10]</a><br>
+Note: This does not show current plants being constructed, including the one in Arizona, and one in Japan. The Camas and Shanghai  plant are developing chips on the micrometer scale, which is older technology that is only supplemental to the higher preforming chips being produced almost solely on the island.<br>
 
+</div>
 
-
-
+<p>One of the largest of these firms is a foundry that supports the development of most PCs and smartphones around the world: the Taiwan Semiconductor Manufacturing Company. When people think about the computers they by, they mostly think of the front-facing companies that you purchase from, e.g. Apple, Dell, HP. They mostly focus on the R&D process of the value chain, but at most participate in the ATP phase of the manufacturing process. These companies rely on TSMC for semiconductor fabrication, sometimes as their sole provider. For example, Apple&apos;s newest A16 chip at the heart of the iPhone 15 is designed by Apple, but relies entirely on TSMC on fabrication. The production of the iPhone, like many other high-computation devices, would not be possible without TMSC. The firm is looking to diversify their fabrication to the United States and Europe including the 40 billion dollar fab investment mentioned earlier. This move was 
+not popular domestically because the company is committed to Taiwan and is embedded into the national identity. The plant was added to the United States and was considered as &ldquo;friend shoring&rdquo;, expected to represent less than 5% of the company&apos;s wafer production <a href="workscited.html#source6">[6]</a>. The rest of production is concentrated on the island in a few plants.</p>
 
 
 </div>
