--- a/glossary.html
+++ b/glossary.html
@@ -25,7 +25,7 @@
 		<li><a href="whataresemiconductors.html">Semiconductors and SSC</a></li>
 		<li><a href="monopolyandduopoly.html">Monopoly and Duopoly</a></li>
 		<li><a href ="whatcangowrong.html">What Can Go Wrong</a></li>
-		<li><a href ="chainresilience.html">Possible Solutions</a></li>
+		<li><a href ="semiconductorsvsoil.html">Possible Solutions</a></li>
 		<li><a href="glossary.html">Glossary</a></li>
 		<li><a href="workscited.html">Works Cited</a></li>
 	 
