--- a/enhancevisibility.html
+++ b/enhancevisibility.html
@@ -23,7 +23,7 @@
 	 <ul>
 		<li><a href="home.html">Home</a></li>
 		<li><a href="whataresemiconductors.html">Semiconductors and SSC</a></li>
-		<li><a href="monopolyandduopoly.html">Monopoly and Duopoly</a></li>
+		<li><a href="tsmc.html">Monopoly and Duopoly</a></li>
 		<li><a href ="semiconductorsvsoil.html">What Can Go Wrong</a></li>
 		<li><a href ="chainresilience.html">Possible Solutions</a></li>
 		<li><a href="glossary.html">Glossary</a></li>
